# bytedesk-cpp

./: CMakeLists.txt  FIXES.md  QT6_FIXES.md  QT6_FIXES_ROUND2.md  README.md  README.zh.md  build.sh  bytedesk.pro  verify.sh
src/: main.cpp
src/core/auth/: authmanager.cpp  authmanager.h
src/core/mqtt/: mqttclient.cpp  mqttclient.h  mqttmessagehandler.cpp  mqttmessagehandler.h
src/core/network/: apibase.cpp  apibase.h  authapi.cpp  authapi.h  httpclient.cpp  httpclient.h  messageapi.cpp  messageapi.h  threadapi.cpp  threadapi.h
src/models/: config.cpp  config.h  message.cpp  message.h  thread.cpp  thread.h  user.cpp  user.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
